IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
7/15/08: In Etomo - Postprocessing, changed the dialog to show that it can
retrieve Z settings from 3dmod as well as X and Y.
7/15/08: In Etomo, preventing tilt from using XTILTFILE when align was run
fiducialess.
7/15/08: In Ccderaser, order 0 can now be specified in order to replace points
with the mean of the border points instead of fitting to them.

7/14/08: Prevented Xfjointomo from fitting to coplanar contour segments.

7/13/08: Fixed problem of model view object edit not dropping extra objects 
when they stop being used.

7/13/08: Prevented saving model and opening image windows during initial
data load.

7/11/08: Fixed bug when resizing locator window that made it become square.

7/6/08: IMOD_3-12-14
7/6/08: Eliminated ratio of measurements to variables in search (old incorrect
ratio) from Tiltalign output; modified Alignlog to work with this.

7/6/08: Made Processchunks killing more robust on our system by listing the
.pid files if they do not seem to exist.

7/4/08: Fixed clip splitrgb, broken 1/11/08.

7/3/08: IMOD_3-12-13
7/2/08:  Made "Examine patch vector model" open model view object edit window
so residual values can be displayed more easily.

7/2/08: Fixed bug that crashed 3dmod when opening a model without an image
and going to section 1 (broken in 3.12.12).

7/1/08: Changed Transferfid to limit the search range for all variables, to
avoid collapsing transformations.

7/1/08: Upgraded Xfsimplex to PIP input, and added options for limiting the
range of the search and for filtering and selecting an arbitrary area to align
within the program.

6/30/08: Changed combine.com to save volcombine script to file instead of 
piping to csh, to fix problem with big scripts on Windows.

6/25/08: Fixed Refinematch crash on residual output when data fit right away.

6/23/08: Added option to Blendmont to prevent trimming of fill areas produced